--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     <!-- Media section start -->
     <div class="section">
         <h1><span>My Media</span></h1>
-        <iframe height="150" width="300" src="https://youtu.be/_Lb07VmMt1Y" allowfullscreen frameborder="0"></iframe>
+        <iframe height="150" width="300" src="https://www.youtube.com/embed/Q6_5InVJZ88" allowfullscreen
+            frameborder="0"></iframe>
     </div>
     <!-- Media section end -->
 
